--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -29,7 +29,7 @@ jobs:
           git clone -b latest_tests https://github.com/openhd/bsp
           cd bsp
           chmod +x bsp
-          ./bsp --long-version -r radxa linux rk356x
+          ./bsp --no-prepare-source --long-version -r radxa linux rk356x
 
       - name: little hack for github uploads
         run: |
