--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install --no-install-recommends -y build-essential qemu-user-static coreutils binfmt-support
+          sudo apt-get install --no-install-recommends -y build-essential qemu-user-static coreutils binfmt-support build-essential
       
       - name: build kernel
         run: |
