--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -22,8 +22,12 @@ jobs:
       - name: install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install --no-install-recommends -y build-essential qemu-user-static coreutils binfmt-support build-essential
-      
+          apt-get full-upgrade --no-install-recommends -y wget build-essential crossbuild-essential-arm64 gcc-arm-none-eabi git ruby sudo apt-utils python3 python2 python-is-python2 curl debhelper python3-distutils python3-pkg-resources python3-setuptools python3-pyelftools python3-ply python3-git cpio bc flex fakeroot bison rsync kmod swig device-tree-compiler u-boot-tools python2-dev python3-dev libssl-dev uuid-dev libgnutls28-dev libc6:arm64 libssl-dev:arm64
+          gem install fpm
+          curl https://bootstrap.pypa.io/pip/2.7/get-pip.py | python2
+          python2 -m pip install pyelftools
+          apt-get install --no-install-recommends -y qemu-user-static binfmt-support
+          
       - name: build kernel
         run: |
           git clone -b latest https://github.com/openhd/bsp
