--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -23,7 +23,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get full-upgrade --no-install-recommends -y wget build-essential crossbuild-essential-arm64 gcc-arm-none-eabi git ruby sudo apt-utils python3 curl debhelper python3-distutils python3-pkg-resources python3-setuptools python3-pyelftools python3-ply python3-git cpio bc flex fakeroot bison rsync kmod swig device-tree-compiler u-boot-tools python2-dev python3-dev libssl-dev uuid-dev libgnutls28-dev
-          gem install fpm
+          sudo gem install fpm
           sudo apt-get install --no-install-recommends -y qemu-user-static binfmt-support
 
       - name: build kernel
