--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -22,16 +22,14 @@ jobs:
       - name: install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get full-upgrade --no-install-recommends -y libc6-arm64-cross wget build-essential crossbuild-essential-arm64 gcc-arm-none-eabi git ruby sudo apt-utils python3 curl debhelper python3-distutils python3-pkg-resources python3-setuptools python3-pyelftools python3-ply python3-git cpio bc flex fakeroot bison rsync kmod swig device-tree-compiler u-boot-tools python2-dev python3-dev libssl-dev uuid-dev libgnutls28-dev
-          sudo gem install fpm
-          sudo apt-get install --no-install-recommends -y qemu-user-static binfmt-support
+          sudo apt-get install --no-install-recommends -y build-essential qemu-user-static coreutils binfmt-support
 
       - name: build kernel
         run: |
-          git clone -b latest https://github.com/openhd/bsp
+          git clone -b latest_tests https://github.com/openhd/bsp
           cd bsp
           chmod +x bsp
-          ./bsp --native-build --long-version -r radxa linux rk356x
+          ./bsp --long-version -r radxa linux rk356x
 
       - name: little hack for github uploads
         run: |
