--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -29,7 +29,7 @@ jobs:
           git clone -b latest_tests https://github.com/openhd/bsp
           cd bsp
           chmod +x bsp
-          ls ../../
+          ls ../../RK_Kernel/
           exit 1
           ./bsp --long-version -r radxa linux rk356x
 
