--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -29,24 +29,10 @@ jobs:
           ls -a
           cd ../
           git clone -b latest_tests https://github.com/openhd/bsp
+          mkdir -p bsp/.src/
+          mv RK_Kernel/* bsp/.src/
           cd bsp
           chmod +x bsp
-          ls -a ../../RK_Kernel/
-          mkdir -p ../../old/
-          mv -v ../../RK_Kernel/* ../../old/
-          mkdir -p ../../RK_Kernel/bsp
-          ls -a
-          echo"_____"
-          ls -a ../
-          echo"_____"
-          ls -a ../../
-          echo"_____"
-          ls -a ../../../
-          echo"_____"
-          ls -a ../../old/
-          mv ../../old/bsp ../../RK_Kernel/bsp
-          mkdir -p ../../RK_Kernel/bsp/.src/
-          mv ../../old/* ../../RK_Kernel/bsp/.src/
           ./bsp --dirty --long-version -r radxa linux rk356x
 
       - name: little hack for github uploads
