--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -27,10 +27,9 @@ jobs:
       - name: build kernel
         run: |
           cd ../
-          ls -a
           git clone -b latest_tests https://github.com/openhd/bsp
           mkdir -p bsp/.src/linux/
-          mv RK_Kernel/* bsp/.src/linux/
+          sudo rsync --remove-source-files RK_Kernel bsp/.src/linux
           cd bsp
           chmod +x bsp
           ./bsp --dirty --long-version -r radxa linux rk356x
