--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -32,7 +32,7 @@ jobs:
           sudo rsync -a --remove-source-files RK_Kernel bsp/.src/
           cd bsp
           chmod +x bsp
-          ./bsp --dirty --long-version -r radxa linux rk356x
+          ./bsp --long-version -r radxa linux rk356x
 
       - name: little hack for github uploads
         run: |
