--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -28,8 +28,8 @@ jobs:
         run: |
           cd ../
           git clone -b latest_tests https://github.com/openhd/bsp
-          mkdir -p bsp/.src/linux/
-          sudo rsync -a --remove-source-files RK_Kernel bsp/.src/
+          # mkdir -p bsp/.src/linux/
+          # sudo rsync -a --remove-source-files RK_Kernel bsp/.src/
           cd bsp
           chmod +x bsp
           ./bsp --long-version -r radxa linux rk356x
