--- a/.github/workflows/build_kernel_for_CORE3566_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_CORE3566_openhd_crosscompile.yaml
@@ -26,7 +26,7 @@ jobs:
 
       - name: build kernel
         run: |
-          git clone -b rkr4.1-core3566 https://github.com/openhd/bsp
+          git clone -b core3566-2 https://github.com/openhd/bsp
           cd bsp
           chmod +x bsp
           ./bsp --long-version -r core3566 linux rk356x |& tee buildlog.log
