--- a/arch/arm64/boot/dts/rockchip/rk3566-radxa-zero3.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3566-radxa-zero3.dts
@@ -694,16 +694,11 @@ gpio-keys {
 			autorepeat;
 
 			up {
-				label = "GPIO Key UP";
-				linux,code = <103>;
-				gpios = <&gpio1 0 1>;
+				label = "GPIO Key A";
+				linux,code = <30>;
+				gpios = <&gpio3 0 5>;
 			};
 
-			down {
-				label = "GPIO Key DOWN";
-				linux,code = <108>;
-				interrupts = <1 IRQ_TYPE_LEVEL_HIGH 7>;
-			};
 };
 
 &gpio0 {
