fix it to 720p60 for now

--- a/arch/arm64/boot/dts/rockchip/rk3566-radxa-zero3.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3566-radxa-zero3.dts
@@ -814,7 +814,10 @@
 
 &hdmi {
 	status = "okay";
-	preset_as_preferred;
+	// preset_as_preferred;
+	// dirty fixing to 720p for now
+	preset_max_hdisplay = <1280>;
+	preset_max_vdisplay = <720>;
 };
 
 &hdmi_in_vp0 {
