--- a/arch/arm64/boot/dts/rockchip/rk3566-radxa-cm3-rpi-cm4-io.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3566-radxa-cm3-rpi-cm4-io.dts
@@ -54,9 +54,10 @@
 
 &hdmi {
 	status = "okay";
-	preset_max_hdisplay = <1920>;
-	preset_max_vdisplay = <1080>;
-	preset_as_preferred;
+	// preset_as_preferred;
+	// dirty fixing to 720p for now
+	preset_max_hdisplay = <1280>;
+	preset_max_vdisplay = <720>;
 };
 
 &hdmi_in_vp0 {
