--- a/drivers/net/wireless/Makefile
+++ b/drivers/net/wireless/Makefile
@@ -33,3 +33,4 @@ obj-$(CONFIG_VIRT_WIFI)	+= virt_wifi.o
 obj-$(CONFIG_WL_ROCKCHIP)	+= rockchip_wlan/
 obj-$(CONFIG_RTL8812AU) += rtl8812au/
 obj-$(CONFIG_RTL8822BU) += rtl8812bu/
+obj-$(CONFIG_RTL8852BU) += rtl8852bu/
