--- a/drivers/media/i2c/Makefile
+++ b/drivers/media/i2c/Makefile
@@ -227,7 +227,7 @@ obj-$(CONFIG_VIDEO_MAX96722)	+= max96722.o
 rdacm20-camera_module-objs	:= rdacm20.o max9271.o
 obj-$(CONFIG_VIDEO_RDACM20)	+= rdacm20-camera_module.o
 obj-$(CONFIG_VIDEO_ST_MIPID02) += st-mipid02.o
-# obj-y += veyecam2m.o
+obj-y += veyecam2m.o
 # obj-m += veye_mvcam.o
 
 obj-$(CONFIG_SDR_MAX2175) += max2175.o
