--- a/arch/arm64/boot/dts/rockchip/rk3566-radxa-zero3w-aic8800ds2.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3566-radxa-zero3w-aic8800ds2.dts
@@ -19,7 +19,7 @@
 
 / {
 	model = "Radxa ZERO 3";
-	compatible = "radxa,zero3", "rockchip,rk3566";
+	compatible ="radxa,zero3w-aic8800ds2", "radxa,zero3", "rockchip,rk3566";
 
 	fiq_debugger: fiq-debugger {
 		compatible = "rockchip,fiq-debugger";
@@ -81,10 +81,8 @@
 
 	wireless_wlan: wireless-wlan {
 		compatible = "wlan-platdata";
-		wifi_chip_type = "ap6212";
-		pinctrl-names = "default";
-		pinctrl-0 = <&wifi_host_wake_irq>;
-		WIFI,host_wake_irq = <&gpio0 RK_PB7 GPIO_ACTIVE_HIGH>;
+		rockchip,grf = <&grf>;
+		WIFI,poweren_gpio = <&gpio0 RK_PC0 GPIO_ACTIVE_HIGH>;
 		status = "okay";
 	};
 
