--- a/arch/arm64/boot/dts/rockchip/rk3566-max3pro-linux.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3566-max3pro-linux.dts
@@ -412,13 +412,13 @@
      };
  };
  
- &mipi_dphy0 {
-     status = "okay";
- };
+//  &mipi_dphy0 {
+//      status = "okay";
+//  };
  
- &mipi_dphy1 {
-     status = "disabled";
- };
+//  &mipi_dphy1 {
+//      status = "disabled";
+//  };
  
  &pinctrl {
      
