--- a/arch/arm64/boot/dts/rockchip/rk3566-radxa-cm3-io.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3566-radxa-cm3-io.dts
@@ -10,7 +10,7 @@
 #include "rk3566-radxa-cm3.dtsi"
 
 / {
-	model = "Radxa Compute Module 3(CM3) IO Board";
+	model = "Radxa CM3 IO Board";
 	compatible = "radxa,cm3-io", "radxa,cm3", "rockchip,rk3566";
 
 	hdmi_sound: hdmi-sound {
@@ -89,6 +89,29 @@
 		cooling-levels = <0 64 128 192 255>;
 		pwms = <&pwm0 0 10000 0>;
 	};
+
+	vcc_ch482d1: vcc-ch482d1 {
+		compatible = "regulator-fixed";
+		gpio = <&gpio3 RK_PC7 GPIO_ACTIVE_LOW>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&ch482d_en1>;
+		regulator-name = "vcc_ch482d1";
+		regulator-always-on;
+		regulator-boot-on;
+		status = "okay";
+	};
+
+	vcc_ch482d2: vcc-ch482d2 {
+		compatible = "regulator-fixed";
+		gpio = <&gpio3 RK_PC6 GPIO_ACTIVE_LOW>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&ch482d_en2>;
+		regulator-name = "vcc_ch482d2";
+		regulator-always-on;
+		regulator-boot-on;
+		status = "okay";
+	};
+
 };
 
 &gpio_leds {
@@ -101,8 +124,7 @@
 
 	pwr-led-red {
 		gpios = <&gpio4 15 GPIO_ACTIVE_LOW>;
-		linux,default-trigger = "none";
-		default-state = "on";
+		linux,default-trigger = "default-on";
 		pinctrl-0 = <&pwr_led>;
 	};
 };
@@ -126,6 +148,9 @@
 
 &hdmi {
 	status = "okay";
+	preset_max_hdisplay = <1920>;
+	preset_max_vdisplay = <1080>;
+	preset_as_preferred;
 };
 
 &hdmi_in_vp0 {
@@ -181,6 +206,14 @@
 	status = "okay";
 };
 
+&pcie2x1 {
+	status = "okay";
+	reset-gpios = <&gpio1 RK_PB2 GPIO_ACTIVE_HIGH>;
+	vpcie3v3-supply = <&vcc3v3_sys>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&pcie20m2_pins>;
+};
+
 &pwm0 {
 	pinctrl-0 = <&pwm0m1_pins>;
 	status = "okay";
@@ -195,6 +228,12 @@
 		#clock-cells = <0>;
 		clock-frequency = <32768>;
 		clock-output-names = "hym8563";
+	};
+};
+
+&rk817 {
+	rtc {
+		status = "disabled";
 	};
 };
 
@@ -250,6 +289,16 @@
 
 		tf_det_en: tf-det-en {
 			rockchip,pins = <0 RK_PD4 RK_FUNC_GPIO &pcfg_output_low>;
+		};
+	};
+
+	ch482d {
+		ch482d_en1: ch482d-en1 {
+			rockchip,pins = <3 RK_PC7 RK_FUNC_GPIO &pcfg_pull_none>;
+		};
+
+		ch482d_en2: ch482d-en2 {
+			rockchip,pins = <3 RK_PC6 RK_FUNC_GPIO &pcfg_pull_none>;
 		};
 	};
 
