--- a/arch/arm64/boot/dts/rockchip/rk3568-radxa-cm3i-io.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3568-radxa-cm3i-io.dts
@@ -9,8 +9,8 @@
 #include "rk3568-radxa-cm3i.dtsi"
 
 / {
-	model = "Radxa E61";
-	compatible = "radxa,e61", "radxa,cm3i", "rockchip,rk3568";
+	model = "Radxa CM3I IO Board";
+	compatible = "radxa,cm3i-io", "radxa,cm3i", "rockchip,rk3568";
 
 	fan0: pwm-fan {
 		compatible = "pwm-fan";
@@ -130,6 +130,10 @@
 	status = "okay";
 };
 
+&u2phy1_host {
+	status = "okay";
+};
+
 &usb2phy0 {
 	status = "okay";
 };
@@ -143,6 +147,14 @@
 };
 
 &usb_host0_ohci {
+	status = "okay";
+};
+
+&usb_host1_ehci {
+	status = "okay";
+};
+
+&usb_host1_ohci {
 	status = "okay";
 };
 
@@ -186,6 +198,21 @@
 };
 
 &i2s0_8ch {
+	status = "okay";
+};
+
+&i2s1_8ch {
+	status = "okay";
+};
+
+&rk809_sound {
+	simple-audio-card,hp-det-gpio = <&gpio4 RK_PC4 GPIO_ACTIVE_HIGH>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&hp_det>;
+	status = "okay";
+};
+
+&rk809_codec {
 	status = "okay";
 };
 
@@ -260,6 +287,12 @@
 	};
 };
 
+&rk809 {
+	rtc {
+		status = "disabled";
+	};
+};
+
 &uart5 {
 	status = "okay";
 	pinctrl-names = "default";
@@ -287,4 +320,11 @@
 			rockchip,pins = <3 RK_PC4 RK_FUNC_GPIO &pcfg_pull_none>;
 		};
 	};
+
+	headphone {
+		hp_det: hp-det {
+			rockchip,pins = <3 RK_PA1 RK_FUNC_GPIO &pcfg_pull_up>;
+		};
+	};
+
 };
