--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,6 @@
 *.bin
 *.bz2
 *.c.[012]*.*
-*.dt.yaml
 *.dtb
 *.dtbo
 *.dtb.S
@@ -99,6 +98,7 @@ modules.order
 !.get_maintainer.ignore
 !.gitattributes
 !.gitignore
+!.github
 !.mailmap
 
 #
