--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -30,8 +30,8 @@ jobs:
 
       - name: build kernel for rk3566 (zero3w+cm3)
         run: |
-          ls -a
-          chmod +x bsp
+          ls -a bsp/
+          chmod +x bsp/bsp
           ./bsp --long-version -r radxa linux rk356x
 
       - name: little hack for github uploads
