--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -32,7 +32,7 @@ jobs:
         run: |
           cd bsp
           ls -a
-          bash bsp --long-version -r radxa linux rk356x
+          bash ./bsp --long-version -r radxa linux rk356x
 
       - name: little hack for github uploads
         run: |
