--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -31,7 +31,8 @@ jobs:
       - name: build kernel for rk3566 (zero3w+cm3)
         run: |
           cd bsp
-          bash ./bsp --long-version --no-submodule-check -r radxa linux rk356x
+          chmod +x bsp
+          ./bsp --long-version --no-submodule-check -r radxa linux rk356x
 
       - name: little hack for github uploads
         run: |
